--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.4.8",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
