--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.5.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
     "mysql2": "^1.6.1",
