--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.5.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.4.8",
     "pug": "^2.0.3",
