--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "6ssou",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
